# clang-format-discover

./: .gitattributes  .gitignore  LICENSE  README.md  clang-format-discover.py  clang_format_discover.py  setup.cfg
src/clang_format_discover/: __init__.py  config.py  execution.py  optimizer.py  options.py  scoring.py  utils.py
