[metadata]
name = clang-format-discover
version = 0.0.1
description = A tool for extracting clang-format style configuration from code.
long_description = file: README.md
author = Robert Konklewski-Pilewicz
author_email = robert.konklewski@gmail.com
url = https://github.com/rkonklex/clang-format-discover
license = MIT
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: C++
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development
    Topic :: Software Development :: Compilers
    Topic :: Software Development :: Pre-processors
    Topic :: Text Processing
    Topic :: Utilities

[options]
package_dir =
    = src
packages = clang_format_discover
python_requires = >=3.7
install_requires =
    flatdict
    pyyaml

[options.entry_points]
console_scripts =
    clang-format-discover = clang_format_discover:main
